fix: New chat button and allow changing people types
